syntax = "proto3";

service KrkStops {
    rpc GetAirly(Installation) returns (Airly) {}
    rpc GetDepartures(Stop) returns (stream Departure) {}
    rpc SearchStops(StopSearch) returns (stream Stop) {}
}

message Installation{
    int32 id = 1;
}
message Airly {
    int32 caqi = 1;
    string color = 2;
    int32 humidity = 3;
    float temperature = 4;
}

message Departure {
    int32 relativeTime = 1;
    string plannedTime = 2;
    string direction = 3;
    string patternText = 4;
}

message Stop {
    string shortName = 1;
    string name = 2;
}

message StopSearch {
    string query = 1;
}